[project]
name = "gpt2-interp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]
